fix profile edit inputs and spacing between members

--- a/src/style/custom.css
+++ b/src/style/custom.css
@@ -1376,7 +1376,7 @@ select {
 
 .OperationProfile .MembersSlide .MembersContainer .profileCardInfo {
   margin-bottom: 100px;
-  width: 75%;
+  width: 95%;
 }
 
 .OperationProfile .SettingsCard {
@@ -2137,7 +2137,8 @@ select {
 }
 
 .ProfilePage-inputsContainer {
-  margin-top: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -2155,6 +2156,7 @@ select {
   border: none;
   border-bottom: 1px solid rgb(153 153 153);
   border-radius: 0;
+  width: 80%;
 }
 
 .ProfilePage-Modal {
@@ -2171,7 +2173,6 @@ select {
 }
 
 .ProfilePage-Modal .modal-dialog .modal-content {
-  height: 50%;
   border-radius: 20px;
 }
 
@@ -2756,7 +2757,7 @@ footer {
   }
 
   .ProfilePage-inputsContainer .ProfilePage-inputsGroup input {
-    width: 45%;
+    width: 90%;
   }
 
   .ProfilesNavigationBar .ProfilesNavigationBar-container button {
